--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             <a href="#" class="parallax_btn btn-floating btn-large waves-effect waves-light blue accent-4"><i class="material-icons">shopping_cart</i></a>
             <a href="#" class="parallax_btn btn-floating btn-large waves-effect waves-light red accent-4"><i class="material-icons">assignment</i></a>
             <a href="#" class="parallax_btn btn-floating btn-large waves-effect waves-light yellow accent-4"><i class="material-icons">info</i></a>
-
           </div>
           </div>
         </nav>
@@ -42,33 +41,59 @@
       </div>
       </div>
     </div>
-    <div class="parallax_row-1 row yellow accent-4">
+
+    <div class="parallax_row-1 yellow red accent-4">
     </div>
-    <div class="parallax_row-2 row">
-      <div class="container">
-        <div class="col s12 m6">
-          <div class="first-card card">
+
+    <div class="parallax_row row red accent-4">
+
+      <div class="col s12">
+        <ul class="tabs">
+          <li class="tab col"><a href="#broschyrer">Foldrar - Broschyrer - Kontorstryck</a></li>
+          <li class="tab col"><a href="#tidningar">Tidningar och Kataloger</a></li>
+          <li class="tab col"><a href="#almanackor">Almanackor och Vykort</a></li>
+          <li class="tab col"><a href="#bocker">Böcker</a></li>
+          <li class="tab col"><a href="#expo-material">Expo-material</a></li>
+        </ul>
+      </div>
+      <div id="broschyrer" class="col s12">
+        <div class="row">
+          <h3 class="">Foldrar - Broschyrer - Kontorstryck</h3>
+        </div>
+        <div class="row">
+          <div class="carousel">
+            <a class="carousel-item black z-depth-5" href="#one!"><img src="http://lorempixel.com/250/250/nature/1"></a>
+            <a class="carousel-item black z-depth-5" href="#two!"><img src="http://lorempixel.com/250/250/nature/2"></a>
+            <a class="carousel-item black z-depth-5" href="#three!"><img src="http://lorempixel.com/250/250/nature/3"></a>
+            <a class="carousel-item black z-depth-5" href="#four!"><img src="http://lorempixel.com/250/250/nature/4"></a>
+            <a class="carousel-item black z-depth-5" href="#five!"><img src="http://lorempixel.com/250/250/nature/5"></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="card z-depth-5">
             <div class="card-content">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porttitor finibus augue, id cursus nibh elementum ac. Curabitur faucibus nunc non nulla semper, vitae laoreet orci ultricies. Vestibulum semper eleifend odio, ac vestibulum nunc porttitor sed. Duis quis lacus leo. Curabitur posuere ligula id eros volutpat luctus. Nulla vehicula nisl diam, ut pretium lectus interdum eget. Praesent sollicitudin iaculis enim ut tincidunt. Vivamus viverra dignissim felis vel luctus. Donec erat est, congue id tincidunt ac, viverra vitae risus. Donec rutrum consequat mauris fringilla tincidunt. Aliquam eu rutrum dui. Praesent et lacinia massa.
             </div>
           </div>
         </div>
 
-        <div class="col s12 m6">
-        </div>
-
       </div>
-    </div>
-    <div class="parallax_row-3 row red accent-4">
-      <div class="carousel">
-        <a class="carousel-item black" href="#one!"><img src="http://lorempixel.com/250/250/nature/1"></a>
-        <a class="carousel-item black" href="#two!"><img src="http://lorempixel.com/250/250/nature/2"></a>
-        <a class="carousel-item black" href="#three!"><img src="http://lorempixel.com/250/250/nature/3"></a>
-        <a class="carousel-item black" href="#four!"><img src="http://lorempixel.com/250/250/nature/4"></a>
-        <a class="carousel-item black" href="#five!"><img src="http://lorempixel.com/250/250/nature/5"></a>
+      <div id="tidningar" class="col s12">
+        <H3></H3>
       </div>
+      <div id="almanackor" class="col s12">Test 3</div>
+      <div id="bocker" class="col s12">Test 4</div>
+      <div id="expo-material" class="col s12">Test 5</div>
     </div>
 
+    <div class="parallax_row-4 row blue accent-4">
+    </div>
+
+    <div class="">
+    </div>
+    <footer class="parallax_row-5 row grey darken-4">
+
+    </footer>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="bower_components/materialize/bin/materialize.js"></script>
