Added do to hardrive switch

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <header>
         <div class="container">
-        <nav class="menu-btn-parallax">
+        <nav id="menu-btn-parallax" class="menu-btn-parallax">
           <div class="container">
             <a href="#" class="parallax_btn btn-floating btn-large waves-effect waves-light grey darken-4"><i class="material-icons">location_on</i></a>
             <a href="#" class="parallax_btn btn-floating btn-large waves-effect waves-light blue accent-4"><i class="material-icons">shopping_cart</i></a>
@@ -70,6 +70,16 @@
             </div>
           </div>
           <div class="row">
+            <div class="container">
+              <ul>
+                <li>
+                  <div class="cat-2">
+                    <div class="cat-background1"></div>
+                    <div class="cat-background2"></div>
+                  </div>
+                </li>
+              </ul>
+            </div>
             <div class="col s6 m6 l6 offset-s6 offset-m6 offset-l6">
             <div class="triangle-isosceles card z-depth-5">
               <div class="card-content">
