added button on du gör...

--- a/src/index.html
+++ b/src/index.html
@@ -312,9 +312,8 @@
                   </p>
                   <p class="card-text">
                     Har du istället mer behov av våra ideér och layouthjälp så
-                    klicka
-                    <br />
-                    här så kommer du till i kontakt med oss.
+                    klicka <a class="btn btn-link" href="#contact">här</a> så
+                    kommer du till i kontakt med oss.
                   </p>
                 </div>
               </div>
