--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,54 @@
     <title>Tryckshopen</title>
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
+  <body id="page-top">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"
+          >Start Bootstrap</a
+        >
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto my-2 my-lg-0">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#services"
+                >Tjänster</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#youdu"
+                >Hur funkar det?</a
+              >
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Start Bootstrap</a>
         <button
@@ -47,7 +93,7 @@
           </ul>
         </div>
       </div>
-    </nav>
+    </nav> -->
 
     <header>
       <div
@@ -133,6 +179,87 @@
         </a>
       </div>
     </header>
+
+    <!-- Projects Section -->
+    <section id="projects" class="projects-section bg-light">
+      <div class="container">
+        <!-- Featured Project Row -->
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+          <div class="col-xl-8 col-lg-7">
+            <img
+              class="img-fluid mb-3 mb-lg-0"
+              src="https://source.unsplash.com/LAaSoL0LrYs/1920x1080"
+              alt=""
+            />
+          </div>
+          <div class="col-xl-4 col-lg-5">
+            <div class="featured-text text-center text-lg-left">
+              <h4>Shoreline</h4>
+              <p class="text-black-50 mb-0">
+                Grayscale is open source and MIT licensed. This means you can
+                use it for any project - even commercial projects! Download it,
+                customize it, and publish your website!
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project One Row -->
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+          <div class="col-lg-6">
+            <img
+              class="img-fluid"
+              src="https://source.unsplash.com/bF2vsubyHcQ/1920x1080"
+              alt=""
+            />
+          </div>
+          <div class="col-lg-6">
+            <div class="bg-yellow text-center h-100 project">
+              <div class="d-flex h-100">
+                <div
+                  class="project-text w-100 my-auto text-center text-lg-left"
+                >
+                  <h4 class="text-dark">Misty</h4>
+                  <p class="mb-0 text-dark-50">
+                    An example of where you can put an image of a project, or
+                    anything else, along with a description.
+                  </p>
+                  <hr class="d-none d-lg-block mb-0 ml-0" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project Two Row -->
+        <div class="row justify-content-center no-gutters">
+          <div class="col-lg-6">
+            <img
+              class="img-fluid"
+              src="https://source.unsplash.com/szFUQoyvrxM/1920x1080"
+              alt=""
+            />
+          </div>
+          <div class="col-lg-6 order-lg-first">
+            <div class="bg-dark text-center h-100 project">
+              <div class="d-flex h-100">
+                <div
+                  class="project-text w-100 my-auto text-center text-lg-right"
+                >
+                  <h4 class="text-white">Mountains</h4>
+                  <p class="mb-0 text-white-50">
+                    Another example of a project with its respective
+                    description. These sections work well responsively as well,
+                    try this theme on a small screen!
+                  </p>
+                  <hr class="d-none d-lg-block mb-0 mr-0" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Page Content -->
     <main role="main">
@@ -292,6 +419,116 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Portfolio Section -->
+      <section id="portfolio">
+        <div class="container-fluid p-0">
+          <div class="row no-gutters">
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+                <img
+                  class="img-fluid"
+                  src="img/portfolio/thumbnails/1.jpg"
+                  alt=""
+                />
+                <div class="portfolio-box-caption">
+                  <div class="project-category text-white-50">
+                    Category
+                  </div>
+                  <div class="project-name">
+                    Project Name
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+                <img
+                  class="img-fluid"
+                  src="img/portfolio/thumbnails/2.jpg"
+                  alt=""
+                />
+                <div class="portfolio-box-caption">
+                  <div class="project-category text-white-50">
+                    Category
+                  </div>
+                  <div class="project-name">
+                    Project Name
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+                <img
+                  class="img-fluid"
+                  src="img/portfolio/thumbnails/3.jpg"
+                  alt=""
+                />
+                <div class="portfolio-box-caption">
+                  <div class="project-category text-white-50">
+                    Category
+                  </div>
+                  <div class="project-name">
+                    Project Name
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+                <img
+                  class="img-fluid"
+                  src="img/portfolio/thumbnails/4.jpg"
+                  alt=""
+                />
+                <div class="portfolio-box-caption">
+                  <div class="project-category text-white-50">
+                    Category
+                  </div>
+                  <div class="project-name">
+                    Project Name
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+                <img
+                  class="img-fluid"
+                  src="img/portfolio/thumbnails/5.jpg"
+                  alt=""
+                />
+                <div class="portfolio-box-caption">
+                  <div class="project-category text-white-50">
+                    Category
+                  </div>
+                  <div class="project-name">
+                    Project Name
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
+                <img
+                  class="img-fluid"
+                  src="img/portfolio/thumbnails/6.jpg"
+                  alt=""
+                />
+                <div class="portfolio-box-caption p-3">
+                  <div class="project-category text-white-50">
+                    Category
+                  </div>
+                  <div class="project-name">
+                    Project Name
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
         </div>
