--- a/src/index.html
+++ b/src/index.html
@@ -59,42 +59,6 @@
       </div>
     </nav>
 
-    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#services">Tjänster</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#youdu">Hur funkar det?</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Kontakta</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav> -->
-
     <header>
       <div
         id="carouselExampleIndicators"
@@ -258,6 +222,80 @@
             </div>
           </div>
         </div>
+
+        <div class="row no-gutters">
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="#">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2>Stationary</h2>
+                  <p class="mb-0">
+                    A yellow pencil with envelopes on a clean, blue backdrop!
+                  </p>
+                </span>
+              </span>
+              <img
+                class="img-fluid"
+                src="./public/images/portfolio-1.jpg"
+                alt=""
+              />
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="#">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2>Ice Cream</h2>
+                  <p class="mb-0">
+                    A dark blue background with a colored pencil, a clip, and a
+                    tiny ice cream cone!
+                  </p>
+                </span>
+              </span>
+              <img
+                class="img-fluid"
+                src="./public/images/portfolio-2.jpg"
+                alt=""
+              />
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="#">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2>Strawberries</h2>
+                  <p class="mb-0">
+                    Strawberries are such a tasty snack, especially with a
+                    little sugar on top!
+                  </p>
+                </span>
+              </span>
+              <img
+                class="img-fluid"
+                src="./public/images/portfolio-3.jpg"
+                alt=""
+              />
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <a class="portfolio-item" href="#">
+              <span class="caption">
+                <span class="caption-content">
+                  <h2>Workspace</h2>
+                  <p class="mb-0">
+                    A yellow workspace with some scissors, pencils, and other
+                    objects.
+                  </p>
+                </span>
+              </span>
+              <img
+                class="img-fluid"
+                src="./public/images/portfolio-4.jpg"
+                alt=""
+              />
+            </a>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -419,116 +457,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Portfolio Section -->
-      <section id="portfolio">
-        <div class="container-fluid p-0">
-          <div class="row no-gutters">
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-                <img
-                  class="img-fluid"
-                  src="img/portfolio/thumbnails/1.jpg"
-                  alt=""
-                />
-                <div class="portfolio-box-caption">
-                  <div class="project-category text-white-50">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-                <img
-                  class="img-fluid"
-                  src="img/portfolio/thumbnails/2.jpg"
-                  alt=""
-                />
-                <div class="portfolio-box-caption">
-                  <div class="project-category text-white-50">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-                <img
-                  class="img-fluid"
-                  src="img/portfolio/thumbnails/3.jpg"
-                  alt=""
-                />
-                <div class="portfolio-box-caption">
-                  <div class="project-category text-white-50">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-                <img
-                  class="img-fluid"
-                  src="img/portfolio/thumbnails/4.jpg"
-                  alt=""
-                />
-                <div class="portfolio-box-caption">
-                  <div class="project-category text-white-50">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-                <img
-                  class="img-fluid"
-                  src="img/portfolio/thumbnails/5.jpg"
-                  alt=""
-                />
-                <div class="portfolio-box-caption">
-                  <div class="project-category text-white-50">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-                <img
-                  class="img-fluid"
-                  src="img/portfolio/thumbnails/6.jpg"
-                  alt=""
-                />
-                <div class="portfolio-box-caption p-3">
-                  <div class="project-category text-white-50">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </a>
             </div>
           </div>
         </div>
