fixed servises picturers

--- a/src/index.html
+++ b/src/index.html
@@ -237,7 +237,7 @@
             <div class="col-xl-8 col-lg-7">
               <img
                 class="img-fluid mb-3 mb-lg-0"
-                src="/public/img/portfolio-2.jpg"
+                src="./public/img/portfolio-2.jpg"
                 alt=""
               />
             </div>
@@ -257,7 +257,11 @@
           <!-- Project One Row -->
           <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
             <div class="col-lg-6">
-              <img class="img-fluid" src="/public/img/portfolio-4.jpg" alt="" />
+              <img
+                class="img-fluid"
+                src="./public/img/portfolio-4.jpg"
+                alt=""
+              />
             </div>
             <div class="col-lg-6">
               <div class="bg-yellow text-center h-100 project">
@@ -283,7 +287,11 @@
           <!-- Project Two Row -->
           <div class="row justify-content-center no-gutters">
             <div class="col-lg-6">
-              <img class="img-fluid" src="/public/img/portfolio-1.jpg" alt="" />
+              <img
+                class="img-fluid"
+                src="./public/img/portfolio-1.jpg"
+                alt=""
+              />
             </div>
             <div class="col-lg-6 order-lg-first">
               <div class="bg-blue text-center h-100 project">
